[package]
name = "pumpswap-sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC dependencies
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Solana dependencies
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
anchor-lang = "0.29"
anchor-client = "0.29"

# Jito dependencies
jito-sdk = "0.1"
jito-core = "0.1"

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Crypto and encoding
bs58 = "0.5"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = "2.0"

# Utilities
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
futures = "0.3"
async-trait = "0.1"

# Configuration
config = "0.13"
toml = "0.8"

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# WebSocket support for real-time data
tokio-tungstenite = "0.20"
tungstenite = "0.20"

# Rate limiting
governor = "0.6"

# Memory management
bytes = "1.5"

[build-dependencies]
tonic-build = "0.10"
